@@ -4,6 +4,7 @@
 
 Version 1.0.3 to be released
 ----------------------------
+- Bug: CHttpRequest.hostInfo may give wrong port number (Qiang)
 - New: Upgraded jquery to 1.3.1 (Qiang)
 
 
